Fix JVM arg dedup dropping value flags: --add-opens/--add-exports crash on Forge 1.17+
Token-based dedup removed repeated --add-opens/--add-exports flags (Forge
profiles pass them multiple times), orphaning their values which the java
launcher then treated as the main class ("Could not find or load main
class java.base/java.lang.invoke=..."). Dedup now treats flag+value pairs
atomically and normalizes minecraft.launcher.version to 42.0.0.

🤖 Generated with Codebuff
Co-Authored-By: Codebuff <noreply@codebuff.com>